deployment/src/deploy.yaml
#@ load("@ytt:data", "data")

apiVersion: apps/v1
kind: Deployment
metadata:
  name: #@ data.values.name
  labels:
    app: #@ data.values.name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: #@ data.values.name
  template:
    metadata:
      labels:
        app: #@ data.values.name
    spec:
      containers:
        - name: #@ data.values.name
          image: #@ data.values.imageVersion
          imagePullPolicy: Always
          ports:
            - containerPort: 3030
