deployment/src/service.yaml
#@ load("@ytt:data", "data")

apiVersion: v1
kind: Service
metadata:
  name: #@ data.values.serviceName
spec:
  type: NodePort
  selector:
    app: #@ data.values.name
  ports:
    - protocol: TCP
      port: 3030
      targetPort: 3030
      nodePort: 32000
